base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: assessment-app
  labels:
    app.kubernetes.io/name: assessment-app
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: assessment-app
