base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: assessment-app
  labels:
    app.kubernetes.io/name: assessment-app
spec:
  parentRefs:
    - name: jaali-gateway
      namespace: envoy-gateway-system
  hostnames:
    - "assessment.jaali.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: assessment-app
          port: 80
